--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,43 @@
+.soporte{
+  background: black;
+  width: 20px;
+  height: 50px;
+  margin-left: 710px;
 
-/* 
-
-    You can write your own styles here...
+ 
+}
+.trafficLight{
+    
+        background: black;
+        display: inline-block;
+        margin-left: 650px;
+        padding: 20px;
+       
     
     
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
+.light {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.glow-red {
+    box-shadow: 0px 0px 9px 4px red;
+    animation: glow 0.8s linear infinite alternate;
+  }
+  .glow-yellow {
+    box-shadow: 0px 0px 9px 4px yellow;
+    animation: glow 0.8s linear infinite alternate;
+  }
+  .glow-green {
+    box-shadow: 0px 0px 9px 4px green;
+    animation: glow 0.8s linear infinite alternate;
+  }
+  
+  @keyframes glow {
+    to {
+        box-shadow: 0px 0px 30px 20px yellowgreen;
+    }
+  }
